Update Kafka bootstrap servers in streams.env for correct configuration

--- a/deploy/env/streams.env
+++ b/deploy/env/streams.env
@@ -1,8 +1,8 @@
 # =========================
 # Kafka
 # =========================
-KAFKA_BOOTSTRAP=b-1.devmsk.xxxxxx.c2.kafka.ap-northeast-2.amazonaws.com:9098,\
-b-2.devmsk.xxxxxx.c2.kafka.ap-northeast-2.amazonaws.com:9098
+KAFKA_BOOTSTRAP=b-1.devmsk.flqawi.c3.kafka.ap-northeast-2.amazonaws.com:9098,\
+b-2.devmsk.flqawi.c3.kafka.ap-northeast-2.amazonaws.com:9098
 
 # =========================
 # JVM
