--- a/consumers/ingest/pom.xml
+++ b/consumers/ingest/pom.xml
@@ -8,7 +8,7 @@
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
-  <artifactId>ingest</artifactId>
+  <artifactId>ingest-consumer</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
@@ -44,6 +44,13 @@
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
       <version>5.1.0</version>
+    </dependency>
+
+    <!-- Logback -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.5.6</version>
     </dependency>
   </dependencies>
 
