--- a/streams/streams-kpi/pom.xml
+++ b/streams/streams-kpi/pom.xml
@@ -28,6 +28,13 @@
       <artifactId>common</artifactId>
       <version>1.0.0</version>
     </dependency>
+
+    <!-- Logback -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.5.6</version>
+    </dependency>
   </dependencies>
 
   <build>
