--- a/producers/pom.xml
+++ b/producers/pom.xml
@@ -37,6 +37,12 @@
       <version>1.7.36</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.45.3.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
