Update env.example with new Kafka bootstrap servers and adjust SQLite DB path for testing

--- a/producers/env.example
+++ b/producers/env.example
@@ -1,5 +1,5 @@
 # Kafka
-KAFKA_BOOTSTRAP_SERVERS=b-1.devmsk.gkreyb.c3.kafka.ap-northeast-2.amazonaws.com:9098,b-2.devmsk.gkreyb.c3.kafka.ap-northeast-2.amazonaws.com:9098
+KAFKA_BOOTSTRAP_SERVERS=b-1.devmsk.7bokux.c3.kafka.ap-northeast-2.amazonaws.com:9098,b-2.devmsk.7bokux.c3.kafka.ap-northeast-2.amazonaws.com:9098
 
 # SQLite DB가 있는 위치 (RPi 로컬)
-DB_BASE_PATH=/mnt/nvme/onlog
+DB_BASE_PATH=/mnt/nvme/onlog/test
