Update env.example to include producer mode configuration

--- a/producers/env.example
+++ b/producers/env.example
@@ -3,3 +3,6 @@ KAFKA_BOOTSTRAP_SERVERS=b-1.devmsk.7bokux.c3.kafka.ap-northeast-2.amazonaws.com:
 
 # SQLite DB가 있는 위치 (RPi 로컬)
 DB_BASE_PATH=/mnt/nvme/onlog/test
+
+# 모드 선택
+PRODUCER_MODE=realtime
