--- a/consumers/ingest/pom.xml
+++ b/consumers/ingest/pom.xml
@@ -43,6 +43,12 @@
       </exclusions>
     </dependency>
 
+    <dependency>
+      <groupId>software.amazon.msk</groupId>
+      <artifactId>aws-msk-iam-auth</artifactId>
+      <version>2.3.5</version>
+    </dependency>
+
     <!-- JSON -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
